--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
         <div class="snowflake"></div>
         <div class="snowflake"></div>
         </div>
-    <button class="start-button">Start</button>
+    <button id="start-button">Start</button>
 </body>
 </html>
