--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
         <div class="snowflake"></div>
         <div class="snowflake"></div>
         </div>
-    <button id="start-button">Start</button>
+   <button class="btn-26"><span>Button</span></button>
 </body>
 </html>
